Add photo info screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity android:name=".presentation.view.MainActivity">
+        <activity android:name=".presentation.ui.home.view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
