--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
 }
